minikube/vault/vault-chart/templates/vault-agent-injector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-agent-injector
  namespace: demo
  labels:
    app.kubernetes.io/name: vault-agent-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault-agent-injector
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault-agent-injector
    spec:
      serviceAccountName: vault-auth
      containers:
        - name: vault-agent-injector
          image: "hashicorp/vault-k8s:1.4.2"
          imagePullPolicy: IfNotPresent
          command: ["vault-k8s"]
          args: ["agent-injector", "-log-level=info"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
          livenessProbe:
            httpGet:
              path: /health/ready
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vault-agent-injector
  namespace: demo
spec:
  selector:
    app.kubernetes.io/name: vault-agent-injector
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vault-agent-injector-cfg
webhooks:
  - name: vault.hashicorp.com
    clientConfig:
      service:
        name: vault-agent-injector
        namespace: demo
        path: "/mutate"
      caBundle: ""
    admissionReviewVersions: ["v1"]
    sideEffects: None
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
    matchPolicy: Equivalent
    namespaceSelector: {}
